[package]
name = "cutfd"
authors = ["Ryu <ryu@tpgjbo.xyz>"]
description = "Find cuts in audio"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hound = "3.4.0"
clap = {version = "3.1.2", features = ["cargo"]}
parse_duration = "2.1.0"
cutfd_lib = {path = "./cutfd_lib"}